[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-amadeus"
version = "0.1.0"
description = "A MCP server for Amadeus Travel API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antigravity", email = "antigravity@example.com"}
]
keywords = ["mcp", "amadeus", "travel", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.2.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-server-amadeus = "mcp_server_amadeus.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_amadeus"]
